zig_build_errors.txt
install
+- install neural-network-training
   +- compile exe neural-network-training Debug native 3 errors
lib\features\database\vector_search_gpu.zig:20:45: error: struct 'array_list.Aligned(features.gpu.accelerator.Tensor,null)' has no member named 'init'
            .vectors = std.ArrayList(Tensor).init(allocator),
                       ~~~~~~~~~~~~~~~~~~~~~^~~~~
C:\Users\donald\AppData\Roaming\Antigravity\User\globalStorage\ziglang.vscode-zig\zig\x86_64-windows-0.16.0-dev.1484+d0ba6642b\lib\std\array_list.zig:576:12: note: struct declared here
    return struct {
           ^~~~~~
referenced by:
    main: examples\neural_network_training.zig:116:73
    callMain [inlined]: C:\Users\donald\AppData\Roaming\Antigravity\User\globalStorage\ziglang.vscode-zig\zig\x86_64-windows-0.16.0-dev.1484+d0ba6642b\lib\std\start.zig:714:37
    WinStartup: C:\Users\donald\AppData\Roaming\Antigravity\User\globalStorage\ziglang.vscode-zig\zig\x86_64-windows-0.16.0-dev.1484+d0ba6642b\lib\std\start.zig:527:53
    2 reference(s) hidden; use '-freference-trace=5' to see all references
lib\features\database\vector_search_gpu.zig:30:21: error: member function expected 1 argument(s), found 0
        self.vectors.deinit();
        ~~~~~~~~~~~~^~~~~~~
C:\Users\donald\AppData\Roaming\Antigravity\User\globalStorage\ziglang.vscode-zig\zig\x86_64-windows-0.16.0-dev.1484+d0ba6642b\lib\std\array_list.zig:624:13: note: function declared here
        pub fn deinit(self: *Self, gpa: Allocator) void {
        ~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
lib\features\database\vector_search_gpu.zig:39:25: error: member function expected 2 argument(s), found 1
        try self.vectors.append(t);
            ~~~~~~~~~~~~^~~~~~~
C:\Users\donald\AppData\Roaming\Antigravity\User\globalStorage\ziglang.vscode-zig\zig\x86_64-windows-0.16.0-dev.1484+d0ba6642b\lib\std\array_list.zig:893:13: note: function declared here
        pub fn append(self: *Self, gpa: Allocator, item: T) Allocator.Error!void {
        ~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
error: 3 compilation errors
failed command: "C:\\Users\\donald\\AppData\\Roaming\\Antigravity\\User\\globalStorage\\ziglang.vscode-zig\\zig\\x86_64-windows-0.16.0-dev.1484+d0ba6642b\\zig.exe" build-exe -ODebug --dep abi "-Mroot=C:\\Users\\donald\\abi\\examples\\neural_network_training.zig" -ODebug --dep build_options --dep accelerator "-Mabi=C:\\Users\\donald\\abi\\lib\\mod.zig" "-Mbuild_options=.zig-cache\\c\\3a7d921129c2b66941febb189f7b7809\\options.zig" -ODebug --dep build_options "-Maccelerator=C:\\Users\\donald\\abi\\lib\\accelerator\\mod.zig" --cache-dir .zig-cache --global-cache-dir "C:\\Users\\donald\\AppData\\Local\\zig" --name neural-network-training --zig-lib-dir "C:\\Users\\donald\\AppData\\Roaming\\Antigravity\\User\\globalStorage\\ziglang.vscode-zig\\zig\\x86_64-windows-0.16.0-dev.1484+d0ba6642b\\lib\\" --listen=-

Build Summary: 3/6 steps succeeded (1 failed)
install transitive failure
+- install neural-network-training transitive failure
   +- compile exe neural-network-training Debug native 3 errors

error: the following build command failed with exit code 1:
.zig-cache\o\e7d3b383645b36a759d62def9104e25e\build.exe C:\Users\donald\AppData\Roaming\Antigravity\User\globalStorage\ziglang.vscode-zig\zig\x86_64-windows-0.16.0-dev.1484+d0ba6642b\zig.exe C:\Users\donald\AppData\Roaming\Antigravity\User\globalStorage\ziglang.vscode-zig\zig\x86_64-windows-0.16.0-dev.1484+d0ba6642b\lib C:\Users\donald\abi .zig-cache C:\Users\donald\AppData\Local\zig --seed 0xf04058e4 -Z5d4314c530982598
